<project name="javaforce" default="jar" basedir=".">
  <description>JavaForce SDK</description>
  <!-- set global properties for this build -->
  <property name="app" value="javaforce"/>
  <property name="src" location="src"/>
  <property name="build" location="classes"/>
  <property name="home" value="."/>
  <property name="version" value="37.2"/>
  <property name="noelf" value="true"/>

  <property name="debian.depends" value="default-jre-headless, libjsch-java, libjzlib-java, libjcifs-java, libv4l-0, desktop-file-utils, libxcursor1"/>
  <property name="fedora.depends" value="java-1.8.0-openjdk, jsch, jzlib, jcifs, libv4l, desktop-file-utils"/>
  <property name="arch.depends" value="jre8-openjdk, java-jsch, v4l-utils, desktop-file-utils"/>  <!-- missing jzlib jcifs -->

  <property environment="env"/>

  <import file="base.xml"/>

  <available property="have_glfw" file="native/glfw/src/window.c"/>
  <target name="glfw" unless="have_glfw" description="download glfw">
    <exec command="git clone https://github.com/glfw/glfw.git native/glfw"/>
    <exec command="git checkout tags/3.3.1" dir="native/glfw"/>
  </target>

  <available property="have_stb" file="native/stb/stb_truetype.h"/>
  <target name="stb" unless="have_stb" description="download stb">
    <exec command="git clone https://github.com/nothings/stb.git native/stb"/>
  </target>

  <target name="ffmpeg-win64" description="download ffmpeg for Win64">
    <echo message="Downloading: jfcodecs-win64.zip"/>
    <get src="http://javaforce.sourceforge.net/jfcodecs-win64.zip" dest="jfcodecs-win64.zip"/>
    <mkdir dir="ffmpeg"/>
    <unzip src="jfcodecs-win64.zip" dest="ffmpeg"/>
  </target>

  <target name="ffmpeg-mac64" description="download ffmpeg for mac64">
    <echo message="Downloading: jfcodecs-mac64.zip"/>
    <get src="http://javaforce.sourceforge.net/jfcodecs-mac64.zip" dest="jfcodecs-mac64.zip"/>
    <mkdir dir="ffmpeg"/>
    <unzip src="jfcodecs-mac64.zip" dest="ffmpeg"/>
  </target>

  <target name="repo" description="download repo">
    <exec command="git clone https://github.com/pquiring/repo"/>
  </target>

  <target name="depjars" depends="depnatives,glfw,stb">
  </target>

  <target name="compile" depends="depjars" description="compile the source">
    <!-- Compile the java code from ${src} into ${build} -->
    <mkdir dir="${build}"/>
    <mkdir dir="jars"/>
    <javac srcdir="${src}" destdir="${build}" target="1.8" source="1.8" debug="true" includeantruntime="false" nativeheaderdir="native/headers">
      <compilerarg value="-Xlint:unchecked"/>
      <classpath>
        <fileset dir="jars" includes="*.jar"/>
      </classpath>
    </javac>
  </target>

  <target name="jar" depends="depjars,compile" description="build jar file">
    <!-- Build jar file from class files -->
    <jar destfile="jars/javaforce.jar" includes="**/*.class" basedir="${build}">
      <fileset dir="${src}">
        <include name="**/*.png"/>
        <include name="**/*.html"/>
        <include name="**/*.js"/>
        <include name="**/*.css"/>
        <include name="**/*.ttf"/>
      </fileset>
      <fileset dir="${java.home}/lib">
        <include name="*.bfc"/>
      </fileset>
    </jar>
    <copy file="jars/javaforce.jar" todir="."/>
  </target>

  <target name="javadoc" description="generate java documentation">
    <javadoc sourcepath="src" destdir="javadoc">
      <classpath>
        <fileset dir="jars" includes="*.jar"/>
      </classpath>
    </javadoc>
  </target>

  <!-- sudo ant install -->
  <target name="install" description="install files">
    <copy file="jars/javaforce.jar" todir="/usr/share/java"/>
    <copy file="jars/bouncycastle.jar" todir="/usr/share/java"/>
    <copy file="jars/filters.jar" todir="/usr/share/java"/>

    <copy file="lnxbin/jbus-call" todir="/usr/bin"/>
    <chmod file="/usr/bin/jbus-call" perm="+x"/>
    <copy file="lnxbin/jbus-client" todir="/usr/bin"/>
    <chmod file="/usr/bin/jbus-client" perm="+x"/>

    <ant antfile="build-jfpty.xml" target="installapp" inheritAll="false"/>
    <ant antfile="build-jfsudo.xml" target="installapp" inheritAll="false"/>
    <ant antfile="build-jfsudo-ask.xml" target="installapp" inheritAll="false"/>
    <ant antfile="build-jfopen.xml" target="installapp" inheritAll="false"/>
    <ant antfile="build-filesplitter.xml" target="installapp" inheritAll="false"/>
    <ant antfile="build-imageconvert.xml" target="installapp" inheritAll="false"/>
    <ant antfile="build-findreplace.xml" target="installapp" inheritAll="false"/>
    <ant antfile="build-pngalpha.xml" target="installapp" inheritAll="false"/>
    <ant antfile="build-jf-update-desktop-database.xml" target="installapp" inheritAll="false"/>
    <ant antfile="build-jfsmbget.xml" target="installapp" inheritAll="false"/>
    <ant antfile="build-jfservice.xml" target="installapp" inheritAll="false"/>
    <ant antfile="build-jf-monitor-dir.xml" target="installapp" inheritAll="false"/>
    <ant antfile="build-web.xml" target="installapp" inheritAll="false"/>
    <ant antfile="build-jfcp.xml" target="installapp" inheritAll="false"/>
    <ant antfile="build-jfmv.xml" target="installapp" inheritAll="false"/>
    <ant antfile="build-jfrm.xml" target="installapp" inheritAll="false"/>
    <ant antfile="build-jfver.xml" target="installapp" inheritAll="false"/>
    <ant antfile="build-jfresmgr.xml" target="installapp" inheritAll="false"/>
  </target>

  <target name="utils" depends="jar" description="build exe for utils 64bit">
    <ant antfile="build-copypath.xml" inheritAll="false"/>
    <ant antfile="build-findreplace.xml" inheritAll="false"/>
    <ant antfile="build-filesplitter.xml" inheritAll="false"/>
    <ant antfile="build-imageconvert.xml" inheritAll="false"/>
    <ant antfile="build-pngalpha.xml" inheritAll="false"/>
    <ant antfile="build-scriptex.xml" inheritAll="false"/>
    <ant antfile="build-web.xml" inheritAll="false"/>
    <ant antfile="build-vss.xml" inheritAll="false"/>
    <zip destfile="jfUtilities-${version}.zip">
      <fileset dir=".">
        <include name="*.exe"/>
        <include name="*.dll"/>
      </fileset>
      <fileset dir="jre_base/bin">
        <include name="*.dll"/>
      </fileset>
    </zip>
  </target>

  <target name="jre-base-desktop" description="build JRE for bundled JRE builds with desktop (swing) support">
    <exec command="jlink --module-path ${java.home}/jmods --add-modules java.base,java.desktop,java.sql,jdk.crypto.ec,jdk.crypto.cryptoki,java.security.jgss --output jre_base_desktop"/>
    <delete>
      <fileset dir="jre_base_desktop/bin" includes="java**.exe"/>
    </delete>
    <delete dir="jre_base_desktop/include"/>
    <delete dir="jre_base_desktop/legal"/>
  </target>

  <target name="jre-base" description="build JRE for bundled JRE builds with only base">
    <exec command="jlink --module-path ${java.home}/jmods --add-modules java.base,java.sql,jdk.crypto.ec,jdk.crypto.cryptoki,java.security.jgss --output jre_base"/>
    <delete>
      <fileset dir="jre_base/bin" includes="java**.exe"/>
    </delete>
    <delete dir="jre_base/include"/>
    <delete dir="jre_base/legal"/>
  </target>

  <target name="jre-base-javac" description="build JRE for bundled JRE builds with base and Java compiler">
    <exec command="jlink --module-path ${java.home}/jmods --add-modules java.base,java.sql,jdk.compiler,jdk.jartool,jdk.zipfs,jdk.crypto.ec,jdk.crypto.cryptoki,java.security.jgss --output jre_base_javac"/>
    <delete>
      <fileset dir="jre_base_javac/bin" includes="java**.exe"/>
    </delete>
    <delete dir="jre_base_javac/include"/>
    <delete dir="jre_base_javac/legal"/>
  </target>

  <target name="clean" description="deletes compiled files">
    <delete>
      <fileset dir="classes" includes="**/*.class"/>
      <fileset dir="jars" includes="javaforce.jar"/>
    </delete>
  </target>
</project>
